--- a/src/statics/css/flexible.css
+++ b/src/statics/css/flexible.css
@@ -33,7 +33,38 @@
   .about__desc h1 span:not(.ico__hands) {
     transition: var(--transition);
     display: block;
-    margin: 0 0 .5rem 0;
+    margin: 0 0 0.5rem 0;
+  }
+}
+@media (max-width: 860px) {
+  /* ------------------------
+    ABOUT 
+------------------------ */
+  .about__cont {
+    flex-direction: column;
+    justify-content: center;
+
+    /**/
+    text-align: center;
+  }
+  .about__cont .about__img .ico__hands::before {
+    right: 22vw;
+    font-size: calc(3rem + 3vw);
+  }
+  .about__cont .about__img img {
+    width: 40vw;
+    margin: 0 auto;
+  }
+  .about__cont .about__greeting {
+    padding-inline: 10px;
+    text-align: left;
+  }
+  .about__desc p {
+    margin-block: 18px 12px;
+  }
+  .about__desc h1 {
+    margin-block: 2rem;
+    /* text-indent: 0; */
   }
 }
 
@@ -110,7 +141,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    padding:0;
+    padding: 0;
     background: var(--bg-color);
     z-index: 2000;
   }
@@ -178,7 +209,8 @@
   section {
     margin: calc(50px + 7vh) 0;
   }
-  section#home, section#home .section {
+  section#home,
+  section#home .section {
     padding-inline: 0;
   }
   .sc__title {
@@ -199,39 +231,8 @@
     text-align: center;
   }
   .btn__resume .ico__point {
-    top:15px;
+    top: 15px;
   }
-
-  /* ------------------------
-    ABOUT 
------------------------- */
-  .about__cont {
-    flex-direction: column;
-    justify-content: center;
-
-    /**/
-    text-align: center;
-  }
-  .about__cont .about__img .ico__hands::before{
-    right: 20vw;
-    font-size: calc(3rem + 5vw);
-  }
-  .about__cont .about__img img {
-    width: 60vw;
-    margin: 0 auto;
-  }
-  .about__cont .about__greeting {
-    padding-inline: 10px;
-    text-align: left;
-  }
-  .about__desc p {
-    margin-block: 18px 12px;
-  }
-  .about__desc h1 {
-    margin-block: 2rem .5rem;
-    /* text-indent: 0; */
-  }
-  
 
   /* ------------------------
     SKILLS 
@@ -278,7 +279,7 @@
     background: #fff;
   }
   .career__cont .career__logo img {
-    max-width: 300px;
+    max-width: 240px;
   }
   .career__cont .career__detail {
     grid-area: 2 / 1 / 3 / 2;
