--- a/src/statics/css/flexible.css
+++ b/src/statics/css/flexible.css
@@ -155,6 +155,7 @@
     justify-content: center;
     flex-wrap: nowrap;
     /**/
+    padding: 0;
     font-size: calc(1.8rem + 0.1vw);
   }
   .cont__menu.open .nav__list a {
@@ -163,8 +164,8 @@
     border-left: none;
     font-size: calc(1.8rem + 0.1vw);
   }
-  nav .nav__list a::before,
-  nav .nav__list a::after {
+  nav .nav__list a::before {
+    width: 0;
     padding: 0;
     content: "";
   }
